--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>HEllo</h1>
-    <h2>This is my new Web page!</h2>
+    <h2 style = "color: blue;">This is my new Web page!</h2>
     <h2>This is my new Web page2ertet!</h2>
     <h1>shut up</h1>
 </body>
