--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
 <body>
     <h1>HEllo</h1>
     <h2 style = "color: blue;">This is my new Web page!</h2>
-    <h2>This is my new Web page2ertet!</h2>
+    <h2 style = "color: green;">This is my new Web page2ertet!</h2>
     <h1>shut up</h1>
 </body>
 
